--- a/tg_bot/requirements.txt
+++ b/tg_bot/requirements.txt
@@ -11,3 +11,7 @@ asyncpg==0.29.0
 greenlet==3.0.3
 alembic==1.13.2
 sqladmin==0.18.0
+itsdangerous==2.2.0
+passlib[bcrypt]
+jwt==1.3.1
+pyjwt==2.9.0
