add docker compose / add nginx image

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,23 @@
 
 server {
+
   listen 80;
   index index.html;
 
-
-  location /tg-bot/ {
+  location /bot/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://tg_bot:8001/;
+    proxy_pass http://tg_bot:8000/bot/;
   }
 
   location /path/to/webhook {
     proxy_set_header Host $http_host;
-    proxy_pass http://tg_bot:8001/path/to/webhook;
+    proxy_pass http://tg_bot:8000/path/to/webhook;
   }
-
 
   location /media/ {
     alias /media/;
   }
 
-  
   location /static/ {
     alias /static/;
     try_files $uri $uri/ /index.html;
