--- a/tg_bot/requirements.txt
+++ b/tg_bot/requirements.txt
@@ -6,14 +6,13 @@ redis==5.0.8
 loguru==0.7.2
 pydantic-settings==2.4.0
 sqlmodel==0.0.21
-# psycopg2-binary==2.9.9
 asyncpg==0.29.0
 greenlet==3.0.3
 alembic==1.13.2
 sqladmin==0.18.0
 itsdangerous==2.2.0
 passlib[bcrypt]
-jwt==1.3.1
-pyjwt==2.9.0
+# jwt
+pyjwt[crypto]==2.9.0
 aiogram3-di==2.0.0
 aiogram_dialog==2.1.0
