--- a/tg_bot/.dev.env.example
+++ b/tg_bot/.dev.env.example
@@ -1,9 +1,9 @@
 bot_token = 
 redis_url=redis://127.0.0.1:6379
 base_webhook_url=
-db_url="postgresql+asyncpg://postgres:e37AE5m2@127.0.0.1:5432/tg_bot"
+db_url="postgresql+asyncpg://postgres:password@127.0.0.1:5432/tg_bot"
 telegram_my_token=
-admin_tg_id=520449460
+admin_tg_id=111222333
 secret_key_jwt=
 algorythm_jwt="HS256"
 superuser_key="superuser_key"
